infra/eks-rails/kubernetes/rails-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rails-app
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: rails-app
  type: NodePort
